kubernetes/operators.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager-operator
