kubernetes/pipelines.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: website-pipeline
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: github
  annotations:
    cert-manager.io/issuer-name: public
    cert-manager.io/issuer-kind: ClusterIssuer
  name: github
  namespace: website-pipeline
spec:
  host: github.apps.azure.dustinscott.io
  port:
    targetPort: http-listener
  tls:
    termination: edge
  to:
    kind: Service
    name: el-github
