kubernetes/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: site4
  namespace: sandbox-4
  annotations:
    cert-manager.io/issuer-name: public
    cert-manager.io/issuer-kind: ClusterIssuer
spec:
  host: site4.apps.azure.dustinscott.io
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: site3
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
